# hello

./: .gitignore  CMakeLists.txt  CMakePresets.json  Notes.md  vcpkg.json
include/: layers.h  loss.h  mlp.h  mnist_loader.h
src/: layers.cpp  main.cpp  mlp.cpp  mnist_loader.cpp
